--- a/tbump.toml
+++ b/tbump.toml
@@ -1,16 +1,8 @@
 [version]
-current = "1.5.0.dev0"
+current = "1.5.1.dev0"
 regex = '''
-  (?P<major>\d+)
-  \.
-  (?P<minor>\d+)
-  \.
-  (?P<patch>\d+)
-  (
-    .
-    (?P<channel>alpha|beta|rc|dev)
-    (?P<release>\d+)
-  )?
+  (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
+  ((?P<channel>a|b|rc|.dev)(?P<release>\d+))?
 '''
 
 [git]
@@ -19,4 +11,3 @@ tag_template = "v{new_version}"
 
 [[file]]
 src = "jupyter_server/_version.py"
-search = '"version": "{current_version}"'
