--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -1,4 +1,4 @@
-name: Jupyter Server Tests [Linux]
+name: Jupyter Server Release Check
 on:
   push:
     branches: '*'
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu]
-        python-version: [ '3.6', '3.7', '3.8', '3.9', 'pypy3' ]
+        python-version: '3.9'
     steps:
     - name: Checkout
       uses: actions/checkout@v1
@@ -37,26 +37,11 @@ jobs:
           ${{ runner.os }}-pip-
     - name: Install the Python dependencies
       run: |
-        pip install -e .[test] codecov
+        pip install -e .[packaging] codecov
     - name: List installed packages
       run: |
         pip freeze
         pip check
-    - name: Run the tests
-      if: ${{ matrix.python-version != 'pypy3' }}
+    - name: Run the check
       run: |
-        pytest -vv --cov jupyter_server --cov-branch --cov-report term-missing:skip-covered
-    - name: Run the tests on pypy
-      if: ${{ matrix.python-version == 'pypy3' }}
-      run: |
-        pytest -vv
-    - name: Install the Python dependencies for the examples
-      run: |
-        cd examples/simple && pip install -e .
-    - name: Run the tests for the examples
-      run: |
-        pytest examples/simple/tests/test_handlers.py
-    - name: Coverage
-      if: ${{ matrix.python-version != 'pypy3' }}
-      run: |
-        codecov
+        bash scripts/release_check.sh
