--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu]
-        python-version: '3.9'
+        python-version: ['3.9']
     steps:
     - name: Checkout
       uses: actions/checkout@v1
