--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -42,6 +42,8 @@ jobs:
       run: |
         pip freeze
         pip check
-    - name: Run the check
+    - name: Run the check      
+      env:
+        GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         bash scripts/release_check.sh
