--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -47,5 +47,6 @@ jobs:
         # https://github.community/t/github-actions-bot-email-address/17204/6
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --global user.name "GitHub Action"
+        git fetch origin ${BRANCH}
         bash scripts/changelog_prep.sh
         bash scripts/release_prep.sh
