--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -35,7 +35,22 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-pip-${{ matrix.python-version }}-
           ${{ runner.os }}-pip-
-    - name: Run the check      
+    - name: Prep Git
+      run:
+        # Use email address for the GitHub Actions bot
+        # https://github.community/t/github-actions-bot-email-address/17204/6
+        git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config --global user.name "GitHub Action"
+    - name: Run the changelog prep      
+      env:
+        GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        BRANCH: "master"
+        VERSION: "100.5.1"
+        TARGET: "jupyter-server/jupyter_server"
+        CHANGELOG: "CHANGELOG.md"
+      run: |
+        bash scripts/changelog_prep.sh
+    - name: Run the release prep      
       env:
         GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BRANCH: "master"
@@ -45,9 +60,4 @@ jobs:
         POST_VERSION: "100.6.0.dev0"
         CHANGELOG_OUTPUT: "changelog_entry.md"
       run: |
-        # Use email address for the GitHub Actions bot
-        # https://github.community/t/github-actions-bot-email-address/17204/6
-        git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-        git config --global user.name "GitHub Action"
-        bash scripts/changelog_prep.sh
         bash scripts/release_prep.sh
