--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -36,7 +36,7 @@ jobs:
           ${{ runner.os }}-pip-${{ matrix.python-version }}-
           ${{ runner.os }}-pip-
     - name: Prep Git
-      run:
+      run: |
         # Use email address for the GitHub Actions bot
         # https://github.community/t/github-actions-bot-email-address/17204/6
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
