--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -60,6 +60,7 @@ jobs:
     - name: Run the release prep      
       env:
         GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        TEST_PYPI_TOKEN: ${{ secrets.TEST_PYPI_TOKEN }}
         BRANCH: "master"
         VERSION: "100.5.1"
         POST_VERSION: "100.6.0.dev0"
