--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -12,6 +12,14 @@ jobs:
       matrix:
         os: [ubuntu]
         python-version: ['3.9']
+    env:
+       BRANCH: "master"
+       VERSION: "100.5.1"
+       POST_VERSION: "100.6.0.dev0"
+       TARGET: "jupyter-server/jupyter_server"
+       CHANGELOG: "CHANGELOG.md"
+       VERSION_COMMAND: "tbump --non-interactive --only-patch"
+       CHANGELOG_OUTPUT: "changelog_entry.md"
     steps:
     - name: Checkout
       uses: actions/checkout@v1
@@ -46,32 +54,39 @@ jobs:
         git config --global user.name "GitHub Action"
         git remote add upstream https://github.com/jupyter-server/jupyter_server
         git fetch upstream ${BRANCH} --tags
+    - name: Install Depedencies
+      run: pip install -e .[publishing]
     - name: Run the changelog prep      
       env:
         GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        BRANCH: "master"
-        VERSION: "100.5.1"
       run: |
-        export TARGET="jupyter-server/jupyter_server"
-        export CHANGELOG="CHANGELOG.md"
         export REMOTE="upstream"
-        export VERSION_COMMAND="tbump --non-interactive --only-patch"
         bash scripts/changelog_prep.sh
     - name: Run the release prep      
       env:
         GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        # Uses an API token from 
-        # https://test.pypi.org/account/register/
-        TWINE_USERNAME: __token__
-        TWINE_PASSWORD: ${{ secrets.TEST_PYPI_TOKEN }}
-        BRANCH: "master"
-        VERSION: "100.5.1"
-        POST_VERSION: "100.6.0.dev0"
       run: |
-        export TARGET="jupyter-server/jupyter_server"
-        export CHANGELOG="CHANGELOG.md"
-        export CHANGELOG_OUTPUT="changelog_entry.md"
-        export VERSION_COMMAND="tbump --non-interactive --only-patch"
         # TODO: when we call Python just pass in the full branch and split
         export REMOTE="upstream"  
         bash scripts/release_prep.sh
+    - name: Publish PyPI Package
+      env:
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.TEST_PYPI_TOKEN }}
+        REGISTRY: https://test.pypi.org/legacy
+      run: |
+        twine upload --repository-url ${REGISTRY} --skip-existing dist/*
+    - name: Extract Final Version
+      run: |
+        echo "FINAL_VERSION=$(echo $VERSION | grep -E "\d\.\d\.\d")" >> $GITHUB_ENV
+    - name: Create Release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        artifacts: ${{ env.CURRENT_LOCALE_DIR }}/dist/*
+        body_path: ${{ env.CHANGELOG_OUTPUT }}
+        prerelease: ${{ env.VERSION != env.FINAL_VERSION }}
+        draft: true
