fix registry url

--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -73,7 +73,7 @@ jobs:
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.TEST_PYPI_TOKEN }}
-        REGISTRY: https://test.pypi.org/legacy
+        REGISTRY: https://test.pypi.org/legacy/
       run: |
         twine upload --repository-url ${REGISTRY} --skip-existing dist/*
     - name: Extract Final Version
