--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -78,7 +78,7 @@ jobs:
         twine upload --repository-url ${REGISTRY} --skip-existing dist/*
     - name: Extract Final Version
       run: |
-        echo "FINAL_VERSION=$(echo $VERSION | grep -E "\d\.\d\.\d")" >> $GITHUB_ENV
+        echo "FINAL_VERSION=$(echo $VERSION | grep -E "\d+\.\d+\.\d+")" >> $GITHUB_ENV
     - name: Create Release
       uses: actions/create-release@v1
       env:
