--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -79,7 +79,7 @@ jobs:
     - name: Extract Final Version
       run: |
         echo "FINAL_VERSION=$(echo $VERSION | grep -E \"\d+\.\d+\.\d+\")" >> $GITHUB_ENV
-        echo ${GITHUB_ENV}
+        echo ${VERSION}
         cat ${GITHUB_ENV}
     - name: Create Release
       uses: actions/create-release@v1
