--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -26,7 +26,7 @@ jobs:
         #echo "FINAL_VERSION=$(python scripts/get_final_version.py)" >> $GITHUB_ENV
         echo ${VERSION}
         cat ${GITHUB_ENV}
-        echo $VERSION | egrep "\d+\.\d+\.\d+" || echo "not found"
+        echo $VERSION | egrep "[0-9]+\.[0-9]+\.[0-9]+" || echo "not found"
         exit 1
     - name: Checkout
       uses: actions/checkout@v1
