fix use of egrep

--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -23,11 +23,9 @@ jobs:
     steps:
     - name: Extract Final Version
       run: |
-        #echo "FINAL_VERSION=$(python scripts/get_final_version.py)" >> $GITHUB_ENV
+        #echo "FINAL_VERSION=$(egrep "[0-9]+\.[0-9]+\.[0-9]+")" >> $GITHUB_ENV
         echo ${VERSION}
         cat ${GITHUB_ENV}
-        echo $VERSION | egrep "[0-9]+\.[0-9]+\.[0-9]+" || echo "not found"
-        exit 1
     - name: Checkout
       uses: actions/checkout@v1
     - name: Install Python ${{ matrix.python-version }}
