--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
     - name: Extract Final Version
       run: |
-        #echo "FINAL_VERSION=$(egrep "[0-9]+\.[0-9]+\.[0-9]+")" >> $GITHUB_ENV
+        #echo "FINAL_VERSION=$(echo ${VERSION} | egrep "[0-9]+\.[0-9]+\.[0-9]+")" >> $GITHUB_ENV
         echo ${VERSION}
         cat ${GITHUB_ENV}
     - name: Checkout
