--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -94,7 +94,9 @@ jobs:
       env:
         RELEASE_ID: ${{ steps.create_release.outputs.id }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        HTML_URL: ${{ steps.create_release.outputs.html_url}}
       run: |
+        echo ${HTML_URL}
         curl \
           -X DELETE \
           -H "Accept: application/vnd.github.v3+json" \
