--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -100,6 +100,6 @@ jobs:
         curl \
           -X DELETE \
           -H "Accept: application/vnd.github.v3+json" \
-          -H "authToken: ${GITHUB_TOKEN}" \
+          -H "Authorization: token ${GITHUB_TOKEN}" \
           https://api.github.com/repos/jovyan123-playground/jupyter_server_playground/releases/${RELEASE_ID}
         
