--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -62,9 +62,16 @@ jobs:
           --output ${CHANGELOG_OUTPUT} \
           --branch ${BRANCH}
         cat ${CHANGELOG_OUTPUT}
+        # Store the new version
+        echo "NEW_VERSION=$(python setup.py --version)" >> $GITHUB_ENV
     - name: Make a PR with the changelog entry change
         run: |
           echo "Can't make a PR on the release check"
+          title="Automated Changelog for ${NEW_VERSION} on ${BRANCH}"
+          branch-suffix=timestamp
+          delete-branch=true
+          base=${BRANCH}
+          body="Automated Changelog for ${NEW_VERSION} on ${BRANCH} using version specifier ${VERSION}"
     - name: Run the release prep      
       env:
         GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -112,3 +119,4 @@ jobs:
     - name: Push the commit(s) and tag(s) to the branch
         run: |
           echo "Can't push on the release check"
+          # git push upstream ${BRANCH} --tags
