--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on: ${{ matrix.os }}-latest
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         os: [ubuntu]
         python-version: ['3.9']
@@ -58,7 +58,6 @@ jobs:
         python scripts/changelog_prep_script.py \
           ${TARGET} ${CHANGELOG} \
           --version ${VERSION} \
-          --post-version ${POST_VERSION} \
           --output ${CHANGELOG_OUTPUT} \
           --branch ${BRANCH}
         cat ${CHANGELOG_OUTPUT}
