--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -16,7 +16,7 @@ jobs:
        BRANCH: "master"
        VERSION: "100.5.1"
        POST_VERSION: "100.6.0.dev0"
-       # TODO: REMOVE THIS IN FAVOR OF GITHUB_REPOSITORY
+       # TODO: REMOVE THIS IN FAVOR OF GITHUB_REPOSITORY env
        TARGET: "jupyter-server/jupyter_server"
        CHANGELOG: "CHANGELOG.md"
        CHANGELOG_OUTPUT: "changelog_entry.md"
