--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -66,11 +66,11 @@ jobs:
     - name: Make a PR with the changelog entry change
       run: |
         echo "Can't make a PR on the release check"
-        title="Automated Changelog for ${NEW_VERSION} on ${BRANCH}"
-        branch-suffix=timestamp
-        delete-branch=true
-        base=${BRANCH}
-        body="Automated Changelog for ${NEW_VERSION} on ${BRANCH} using version specifier ${VERSION}"
+        # title="Automated Changelog for ${NEW_VERSION} on ${BRANCH}"
+        # branch-suffix=timestamp
+        # delete-branch=true
+        # base=${BRANCH}
+        # body="Automated Changelog for ${NEW_VERSION} on ${BRANCH} using version specifier ${VERSION}"
     - name: Run the release prep      
       env:
         GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
