--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -16,7 +16,6 @@ jobs:
        BRANCH: "master"
        VERSION: "100.5.1"
        POST_VERSION: "100.6.0.dev0"
-       TARGET: ${{ env.GITHUB_REPOSITORY }}
        CHANGELOG: "CHANGELOG.md"
        CHANGELOG_OUTPUT: "changelog_entry.md"
     steps:
@@ -47,7 +46,7 @@ jobs:
         BRANCH: "master"
       run: |
         python scripts/git_prep_script.py \
-          ${TARGET} ${BRANCH}
+          ${GITHUB_REPOSITORY} ${BRANCH}
     - name: Install Dependencies
       run: pip install -e .[publishing]
     - name: Run the changelog prep      
@@ -55,7 +54,7 @@ jobs:
         GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         python scripts/changelog_prep_script.py \
-          ${TARGET} ${CHANGELOG} \
+          ${GITHUB_REPOSITORY} ${CHANGELOG} \
           --version ${VERSION} \
           --output ${CHANGELOG_OUTPUT} \
           --branch upstream/${BRANCH}
@@ -76,7 +75,7 @@ jobs:
         GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         python scripts/release_prep_script_python.py \
-          ${TARGET} ${CHANGELOG} \
+          ${GITHUB_REPOSITORY} ${CHANGELOG} \
           --version ${VERSION} \
           --post-version ${POST_VERSION} \
           --output ${CHANGELOG_OUTPUT} \
