--- a/.github/workflows/create-changelog.yml
+++ b/.github/workflows/create-changelog.yml
@@ -5,9 +5,6 @@ on:
       version:
         description: 'New Version'     
         required: true
-      branch:
-        description: 'Target branch'
-        default: ${{ github.event.ref }}
 jobs:
   changelog:
     runs-on: ${{ matrix.os }}-latest
@@ -17,7 +14,7 @@ jobs:
         os: [ubuntu]
         python-version: ['3.9']
     env:
-       BRANCH: ${{ github.event.inputs.branch }}
+       BRANCH: ${{ github.event.ref }}
        VERSION: ${{ github.event.inputs.version }}
        CHANGELOG: "CHANGELOG.md"
        CHANGELOG_OUTPUT: "changelog_entry.md"
