--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -42,6 +42,9 @@ jobs:
           ${{ runner.os }}-pip-
     - name: Get Branch from GITHUB_REF
       run: |
+        echo ${GITHUB_REF}
+        echo ${GITHUB_BASE_REF}
+        echo ${GITHUB_HEAD_REF}
         echo "BRANCH=$(echo ${GITHUB_REF} | egrep -o "[^/]*$")" >> $GITHUB_ENV
     - name: Prep Git
       run: |
