--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -46,6 +46,7 @@ jobs:
     - name: Get Branch from environment
       run: |
         echo "BRANCH=$(echo ${GITHUB_REF} | egrep -o "[^/]*$")" >> $GITHUB_ENV
+        cat ${GITHUB_ENV}
     - name: Prep Git
       run: |
         python scripts/git_prep_script.py \
@@ -73,6 +74,7 @@ jobs:
     - name: Extract Final Version
       run: |
         echo "FINAL_VERSION=$(echo ${VERSION} | egrep "[0-9]+\.[0-9]+\.[0-9]+")" >> $GITHUB_ENV
+        cat ${GITHUB_ENV}
     - name: Push the commit(s) and tag(s) to the branch
       run: |
         git push upstream ${BRANCH} --tags
