--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -63,20 +63,12 @@ jobs:
         python scripts/changelog_prep_script.py \
           ${GITHUB_REPOSITORY} ${CHANGELOG} \
           --version ${VERSION} \
-          --output ${CHANGELOG_OUTPUT} \
           --branch upstream/${BRANCH}
-        cat ${CHANGELOG_OUTPUT}
-        # Store the new version
-        echo "NEW_VERSION=$(python setup.py --version)" >> $GITHUB_ENV
+        git diff
     - name: Make a PR with the changelog entry change
       run: |
         echo "Can't make a PR on the release check"
-        # uses: peter-evans/create-pull-request@v3
-        # title="Automated Changelog for ${NEW_VERSION} on ${BRANCH}"
-        # branch-suffix=timestamp
-        # delete-branch=true
-        # base=${BRANCH}
-        # body="Automated Changelog for ${NEW_VERSION} on ${BRANCH} using version specifier ${VERSION}"
+        git commit -a -m "Commit Changelog"
     - name: Run the release prep      
       env:
         GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
