--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -77,7 +77,8 @@ jobs:
         cat ${GITHUB_ENV}
     - name: Push the commit(s) and tag(s) to the branch
       run: |
-        git push upstream ${BRANCH} --tags
+
+        git push -u upstream ${BRANCH} --tags
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
