--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -49,7 +49,7 @@ jobs:
         cat ${GITHUB_ENV}
     - name: Prep Git
       run: |
-        python scripts/git_prep_script.py \
+        python scripts/git_prep.py \
           ${GITHUB_REPOSITORY} ${BRANCH}
     - name: Install Dependencies
       run: |
