--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -52,7 +52,7 @@ jobs:
         cat ${GITHUB_ENV}
     - name: Prep Git
       run: |
-        python scripts/git_prep.py \
+        python scripts/prep_git.py \
           ${GITHUB_REPOSITORY} ${BRANCH}
     - name: Install Dependencies
       run: |
